--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ font-size: 1.2rem;
 }
 }
 
-/* services */
+/* servicos */
 .services {
   background: linear-gradient(90deg, #3bc374 0%, #007f35 100%);
   margin-top: 2rem;
@@ -94,7 +94,7 @@ font-size: 1.2rem;
   }
 }
 
-/* products */
+/* produtos  */
 .products {
   background: linear-gradient(90deg, #1cb5e0 0%, #004495 100%);
   color: white;
@@ -119,7 +119,7 @@ font-size: 1.2rem;
 
 }
 
-/* providers */
+/* produtos fornecedores */
 .providers img {
   max-height: 100px;
 }
@@ -139,15 +139,38 @@ font-size: 1.2rem;
 .video{
   height: 35rem;
 }
-
 }
 
-/* address */
+/* endereco */
  #map{
-  /* width: 500px;  */
-  height: 400px; 
-  overflow: hidden;
- }
+  height: 410px; 
+  }
+
+  @media only screen and (max-width: 482px) {
+  .endereco h1{
+font-size: 1.3rem;
+margin: 2rem;
+  }
+  }
+
+    @media only screen and (max-width: 482px) {
+  .endereco h1{
+font-size: 1rem;
+margin: 1rem;
+  }
+  }
+
+/* tempo */
+.fa-magnifying-glass{
+  font-size: 1rem;
+}
+.temperatura, span{
+  font-size: 2rem;
+}
+.tempo{
+  max-width: 30rem;
+}
+
 
 /* footer */
 .footer {
@@ -163,13 +186,3 @@ font-size: 1.2rem;
 }
 }
 
-/* tempo */
-.tempo{
-  width: 20rem;
-}
-.fa-magnifying-glass{
-  font-size: 1rem;
-}
-.temperatura, span{
-  font-size: 2rem;
-}
